--- a/private-testnet/changelog.adoc
+++ b/private-testnet/changelog.adoc
@@ -2,16 +2,41 @@
 
 Summary of Keep private testnet releases in reverse chronological order.
 
+== 2019-09-27
+
+=== NEW FEATURES
+
+- Configurable `AnnouncedAddresses`:  If you start a keep-client in a private network it's likely
+that the IP address announced to the Keep Network is not accessible from the outside world.  Now in
+your `keep-client-confg.toml` file you can override the default annouced address by providing known
+list of IP addresses or DNS hostnames in section `[LibP2P]` with key `AnnoucedAddresses`.
+`AnnouncedAddresses` has been added to configuration files included with deployment bundles. See the
+quickstart guide on formatting for `AnnoucedAddresses` entries.  Leaving the configuration as-is
+will result in setting the default announce address.
+
+=== OTHERS
+
+- Removed LibP2P NAT support:  We've opted for configurable announced addresses instead of leaning on
+LibP2P built-ins whose success can vary widely depending on network conditions.
+
 == 2019-09-09
 
-== BUGFIXES
+=== BUGFIXES
 
-- Incorrect group threshold when signing relay entry:  As part of a group there is an honest and dishonest threshold for participants to produce a relay entry.  Our current group size is set to 5.  At a group size of 5 we need a minimum of 3 honest and max of 2 dishonest participants.  We have been calculating the threshold at 4, resulting in more stringent than desired threshold requirements.  Additionally, we corrected GJKR polynomial generation by setting the dishonest threshold as the degree, instead of honest threshold.
+- Incorrect group threshold when signing relay entry:  As part of a group there is an honest and
+dishonest threshold for participants to produce a relay entry.  Our current group size is set to
+5.  At a group size of 5 we need a minimum of 3 honest and max of 2 dishonest participants.  We
+have been calculating the threshold at 4, resulting in more stringent than desired threshold
+requirements.  Additionally, we corrected GJKR polynomial generation by setting the dishonest
+threshold as the degree, instead of honest threshold.
 
 == 2019-09-06
 
 === NEW FEATURES
-- Allow for libp2p NAT support:  This takes shape in the form of a new configuration option in your `keep-client-confg.toml` file.  If enabled this feature will attempt to connect with auto-discovered network firewall using UPnP, open a port, and configure the mapping internally.  To enable this feature set `NAT = true` under section `[libp2p]` in your `keep-client-confg.toml`.
+- Allow for LibP2P NAT support:  This takes shape in the form of a new configuration option in your
+`keep-client-confg.toml` file.  If enabled this feature will attempt to connect with
+auto-discovered network firewall using UPnP, open a port, and configure the mapping internally.
+To enable this feature set `NAT = true` under section `[LibP2P]` in your `keep-client-confg.toml`.
 
 === OTHERS
 - Added enhanced logging around group statistics and network connection details.
@@ -19,24 +44,38 @@ Summary of Keep private testnet releases in reverse chronological order.
 == 2019-08-22
 
 === NEW FEATURES
-- Timeout for a relay entry: If the group selected to produce a new random number does not deliver relay entry on time, we terminate that group and another one is selected to do the work.
+- Timeout for a relay entry: If the group selected to produce a new random number does not deliver
+relay entry on time, we terminate that group and another one is selected to do the work.
 
-- Allow re-trigger genesis when the first group creation failed: We should be able to trigger genesis once again if the first group creation failed. This is to avoid a situation that something went wrong during the DKG and we are dead in the water with our contracts.
+- Allow re-trigger genesis when the first group creation failed: We should be able to trigger
+genesis once again if the first group creation failed. This is to avoid a situation that something
+went wrong during the DKG and we are dead in the water with our contracts.
 
 === BUGFIXES
-- Non-uniform distribution of group selection results: Fixed bug in group selection protocol; not all groups registered on the chain had the same chance of being selected in the case when we were marking some groups as expired. We fixed this problem and now all groups have the same chance of being selected.
+- Non-uniform distribution of group selection results: Fixed bug in group selection protocol; not
+all groups registered on the chain had the same chance of being selected in the case when we were
+marking some groups as expired. We fixed this problem and now all groups have the same chance of
+being selected.
 
-- Broadcast channel initialisation problems:  When running Keep nodes and sending a request for a new relay entry, occasionally we received the error coming from the chain saying “Total number of groups must be greater than zero”. This was caused by bug in DKG protocol in broadcast channel initialisation and happened when we had a network glitch for a while.  This is addressed now.
+- Broadcast channel initialisation problems:  When running Keep nodes and sending a request for a
+new relay entry, occasionally we received the error coming from the chain saying “Total number of
+groups must be greater than zero”. This was caused by bug in DKG protocol in broadcast channel
+initialisation and happened when we had a network glitch for a while.  This is addressed now.
 
-- Incorrect seed for group selection and Pedersen commitment: The group selection protocol should take the previous beacon value along with staker-specific values to create a ticket. The buggy implementation passed the seed instead of the previous beacon value to group selection. This could threat the trapdoor of Pedersen commitment we use in DKG.
+- Incorrect seed for group selection and Pedersen commitment: The group selection protocol should
+take the previous beacon value along with staker-specific values to create a ticket. The buggy
+implementation passed the seed instead of the previous beacon value to group selection. This could
+threat the trapdoor of Pedersen commitment we use in DKG.
 
 === OTHERS
 - Upgrade to the newest OpenZeppelin version.
 
-- Covered all known corner cases DKG protocol with integration tests for member inactivity and fixed all minor issues found.
+- Covered all known corner cases DKG protocol with integration tests for member inactivity and fixed
+all minor issues found.
 
 == 2019-07-16
-- Extended the deployment bundle and `docker run` command to include persistence.  The addition of persistence allows a restarted keep-client to recover group status/state.
+- Extended the deployment bundle and `docker run` command to include persistence.  The addition of
+persistence allows a restarted keep-client to recover group status/state.
 
 - Added more robust logging (now with Timestamps!).
 
