--- a/docs/keep-client-quickstart.adoc
+++ b/docs/keep-client-quickstart.adoc
@@ -28,22 +28,20 @@ The ingress port is configurable and can be set in the included `keep-client-con
 
 `Port` is in section `[libp2p]`.
 
-=== AnnouncedAddresses
+=== `LibP2P.AnnouncedAddresses`
 
-Depending on your deployment conditions it's possible your node address announced with the Keep
+Depending on your deployment conditions it's possible the node address announced to the Keep
 Network is not publicly accessible.  When this happens other peers on the network will not be able
-to communicate directly with your nodes.
+to communicate directly with your node.
 
-If you have a list of publicly accessible IP addresses or DNS hostnames that can route traffic to
-your nodes you can configure them under `AnnouncedAddresses` in section `[libp2p]`.  When your
-client starts up it will annouce the provided list instead of the default.  If you want to use the
-default then leave `AnnouncedAddresses` set to `[]`.
+If you have a list of publicly accessible IP addresses and/or DNS hostnames that can route traffic to
+your node you can configure them under `AnnouncedAddresses` in section `[libp2p]`.  When your
+node starts up it will announce the provided list instead of the default.  If you want to use the
+default address then leave `AnnouncedAddresses` set to `[]` or remove the entry all together.
 
-`AnnouncedAddresses` will be part of a multiaddr and should be formatted accordingly. See link:[https://github.com/multiformats/multiaddr] for more information on formatting.
+`AnnouncedAddresses` should consist of multiaddrs and must be formatted accordingly. See link:[https://github.com/multiformats/multiaddr] for more information on formatting.
 
-Below are a few examples:
-
-`AnnouncedAddresses = ["/type/value/protocol/port"]`
+==== Example
 
 `AnnouncedAddresses = ["/dns4/example.com/tcp/3919", "/ip4/80.70.60.50/tcp/3919"]`
 
