--- a/docs/development/local-keep-network.adoc
+++ b/docs/development/local-keep-network.adoc
@@ -345,7 +345,7 @@ $ cp config.local.1.toml config.local.5.toml
 In the `config.local.1.toml` enable network settings for bootstrap peer:
 ```
 [LibP2P]
-        Seed = 2
+        Bootstrap = true
         Port = 3919
 ```
 
@@ -378,7 +378,7 @@ $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config
 The next thing we need to do is to alter configuration file of each
 non-bootstrap peer. Please modify `Port` number so that it is unique for each
 peer and update the address of the bootstrap peer. For a non-bootstrap peer,
-`Seed` value should be removed or remain commented out. We also need to update
+`Bootstrap` property should be removed or set to `false`. We also need to update
 ethereum account and key file so that each Keep client uses a different account.
 
 In `config.local.2.toml`:
