--- a/docs/development/local-keep-network.adoc
+++ b/docs/development/local-keep-network.adoc
@@ -345,7 +345,6 @@ $ cp config.local.1.toml config.local.5.toml
 In the `config.local.1.toml` enable network settings for bootstrap peer:
 ```
 [LibP2P]
-        Bootstrap = true
         Port = 3919
 ```
 
@@ -367,8 +366,7 @@ And start the peer:
 ```
 $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config.local.1.toml start
 ------------------------------------------------------------------------------------------------
-| Node: BOOTSTRAP node                                                                         |
-| Port: 0                                                                                      |
+| Port: 3919                                                                                   |
 | IPs : /ip6/::1/tcp/3919/ipfs/16Uiu2HAkvcmFM53nzHN4dAB4sfemFAu86ytA8wJveKQqYsHvfsca           |
 |       /ip4/192.168.1.103/tcp/3919/ipfs/16Uiu2HAkvcmFM53nzHN4dAB4sfemFAu86ytA8wJveKQqYsHvfsca |
 |       /ip4/127.0.0.1/tcp/3919/ipfs/16Uiu2HAkvcmFM53nzHN4dAB4sfemFAu86ytA8wJveKQqYsHvfsca     |
@@ -377,8 +375,7 @@ $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config
 
 The next thing we need to do is to alter configuration file of each
 non-bootstrap peer. Please modify `Port` number so that it is unique for each
-peer and update the address of the bootstrap peer. For a non-bootstrap peer,
-`Bootstrap` property should be removed or set to `false`. We also need to update
+peer and update the address of the bootstrap peer. We also need to update
 ethereum account and key file so that each Keep client uses a different account.
 
 In `config.local.2.toml`:
@@ -449,8 +446,7 @@ Finally, we can start each non-bootstrap instance:
 ```
 $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config.local.2.toml start
 ------------------------------------------------------------------------------------------------
-| Node: BOOTSTRAP node                                                                         |
-| Port: 0                                                                                      |
+| Port: 3920                                                                                   |
 | IPs : /ip4/127.0.0.1/tcp/3919/ipfs/16Uiu2HAmGsfKJaP4UGoGWYV6nxY8RPhVoHxT9rUQbPsxFedMHzEr     |
 |       /ip6/::1/tcp/3919/ipfs/16Uiu2HAmGsfKJaP4UGoGWYV6nxY8RPhVoHxT9rUQbPsxFedMHzEr           |
 |       /ip4/192.168.1.103/tcp/3919/ipfs/16Uiu2HAmGsfKJaP4UGoGWYV6nxY8RPhVoHxT9rUQbPsxFedMHzEr |
@@ -460,8 +456,7 @@ $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config
 ```
 $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config.local.3.toml start
 ------------------------------------------------------------------------------------------------
-| Node: BOOTSTRAP node                                                                         |
-| Port: 0                                                                                      |
+| Port: 3921                                                                                   |
 | IPs : /ip4/127.0.0.1/tcp/3919/ipfs/16Uiu2HAmAeFbeTZstFhAiEL8jGQiNR9sygKstrhpG4F2wKmt1784     |
 |       /ip6/::1/tcp/3919/ipfs/16Uiu2HAmAeFbeTZstFhAiEL8jGQiNR9sygKstrhpG4F2wKmt1784           |
 |       /ip4/192.168.1.103/tcp/3919/ipfs/16Uiu2HAmAeFbeTZstFhAiEL8jGQiNR9sygKstrhpG4F2wKmt1784 |
@@ -471,8 +466,7 @@ $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config
 ```
 $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config.local.4.toml start
 ------------------------------------------------------------------------------------------------
-| Node: BOOTSTRAP node                                                                         |
-| Port: 0                                                                                      |
+| Port: 3922                                                                                   |
 | IPs : /ip4/127.0.0.1/tcp/3919/ipfs/16Uiu2HAmQcPbBVftPR8SKctpG9ToDmu7kLpaKPUc3AreEwzWbuyb     |
 |       /ip6/::1/tcp/3919/ipfs/16Uiu2HAmQcPbBVftPR8SKctpG9ToDmu7kLpaKPUc3AreEwzWbuyb           |
 |       /ip4/192.168.1.103/tcp/3919/ipfs/16Uiu2HAmQcPbBVftPR8SKctpG9ToDmu7kLpaKPUc3AreEwzWbuyb |
@@ -482,8 +476,7 @@ $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config
 ```
 $ LOG_LEVEL="info" KEEP_ETHEREUM_PASSWORD="password" ./keep-core --config config.local.5.toml start
 ------------------------------------------------------------------------------------------------
-| Node: BOOTSTRAP node                                                                         |
-| Port: 0                                                                                      |
+| Port: 3923                                                                                   |
 | IPs : /ip4/127.0.0.1/tcp/3919/ipfs/16Uiu2HAm7wzWEs3fUbA9rgzKRP82Zhtnq2CxZZdXPMrJJgNNra1p     |
 |       /ip6/::1/tcp/3919/ipfs/16Uiu2HAm7wzWEs3fUbA9rgzKRP82Zhtnq2CxZZdXPMrJJgNNra1p           |
 |       /ip4/192.168.1.103/tcp/3919/ipfs/16Uiu2HAm7wzWEs3fUbA9rgzKRP82Zhtnq2CxZZdXPMrJJgNNra1p |
