--- a/docs/rfc/rfc-15-slashing.adoc
+++ b/docs/rfc/rfc-15-slashing.adoc
@@ -23,14 +23,8 @@ The slashing method should implement the tattletale transfer mitigations
 defined in the link:rfc-14-token-grants.adoc[token grant RFC],
 always burning at least 95% of the penalty amount.
 
-Only authorized operator contracts should be able to punish an operator,
-but keeps created by keep factories
-should be able to slash if their corresponding factory is authorized,
-instead of requiring individual authorization.
-
-Some operator contracts may rely on an external trusted application
-to determine whether misbehavior has occurred.
-The impact of malfunctions in trusted applications should be minimized.
+To protect staker funds,
+only authorized operator contracts should be able to punish an operator.
 
 === Implementation
 
@@ -47,14 +41,14 @@ they should be removed from the group/keep the misbehavior occurred in.
 
 ==== Authorization and slashing
 
-_Operator contracts_ (including _keep factories_)
-are authorized to impose penalties by stakers' _authorizers_.
+_Operator contracts_ are authorized to impose penalties
+by stakers' _authorizers_.
 All stakers using the same _authorizer_
 share the set of authorized operator contracts.
 Once given, this authorization cannot be revoked.
 
-When a staker wishes to join a group or keep,
-the contract responsible for creating the group/keep
+When a staker wishes to join a group
+the contract responsible for creating the group
 must be authorized by the staker's authorizer.
 The operator contract checks its authorization status
 when determining a staker's eligibility.
@@ -75,37 +69,6 @@ the operator contract includes the tattletale operator's address in the call.
 The staking contract subtracts the applicable penalty from the operator's stake
 and burns 95% of it.
 The remaining 5% is transferred to the tattletale's _beneficiary_ address.
-
-===== Slashing by indirectly authorized keeps
-
-_Keeps_ created by _keep factories_
-are not individually authorized to impose punishments.
-Instead, the _keep factories_ are authorized to impose punishments
-and each keep factory tracks the individual keeps it has created.
-
-When the keep wants to impose a punishment,
-it includes its factory's address in the call to the staking contract.
-The staking contract checks that the factory is authorized,
-and the keep is listed as being created by the factory.
-
-===== Trusted applications
-
-Some keeps rely on trusted input from a third-party application
-to determine if misbehavior has happened.
-These _trusted applications_ are authorized by the staker's authorizer,
-separately from operator contracts.
-
-When a keep involving such a trusted application is created,
-the operator contract must include the trusted application's address
-in the creation event,
-and check the trusted application's authorization 
-alongside its own authorization status
-when determining each staker's eligibility to join.
-
-Trusted applications cannot punish stakers directly;
-they must go through the associated keep.
-When the trusted application claims misbehavior has occurred,
-the keep applies the punishment normally.
 
 ==== Penalty amounts
 
@@ -137,27 +100,6 @@ Check that `msg.sender` is authorized to slash `perp`:
 Take `sum` tokens from stake of `perp`;
 burn `sum * 0.95`; transfer `sum * 0.05` to beneficiary of staker `mole`.
 
-`indirectSlash(address factory, address perp, tokens sum)`::
-
-Check that `factory` is authorized to slash `perp`:
-`isAuthorized(factory, perp.authorizer) == true`.
-
-Check that `factory` lists `msg.sender` among keeps it created
-`factory.made(msg.sender) == true`.
-
-Take `sum` tokens from stake of `perp` and burn them.
-
-`indirectSeize(address factory, address perp, tokens sum, address mole)`::
-
-Check that `factory` is authorized to slash `perp`:
-`isAuthorized(factory, perp.authorizer) == true`.
-+
-Check that `factory` lists `msg.sender` among keeps it created:
-`factory.made(msg.sender) == true`.
-+
-Take `sum` tokens from stake of `perp`;
-burn `sum * 0.95`; transfer `sum * 0.05` to beneficiary of staker `mole`.
-
 ===== Staking contract: authorizations
 
 `authorize(address op_contract)`::
@@ -171,14 +113,6 @@ and `op_contract` may slash their stakes.
 
 Check if the authorizer `by` has authorized `op_contract`.
 
-`trust(address app)`::
-
-Authorize `app` as a _trusted application_.
-
-`isTrusted(address app, address by) -> bool`::
-
-Check if authorizer `by` has authorized `app` as a trusted application.
-
 ===== Token contract
 
 `burn(amount sum)`::
@@ -186,25 +120,11 @@ Check if authorizer `by` has authorized `app` as a trusted application.
 Any address that holds tokens can call `burn(amount sum)`
 to burn `sum` tokens, limited by tokens held by the address.
 
-===== Keep factory
-
-Keep factories should maintain a list of keeps they have created.
-
-`made(address keep) -> bool`::
-
-Return whether `keep` was created by this factory.
-
 === Limitations
 
 Slashing is not limited to the amount originally staked
 for participating in the relevant operations;
 a malfunctioning operator contract could cause a staker to lose all stake.
-
-When an operator contract relies on a trusted application,
-it is imperative for the operator contract to verify
-that the stake a trusted application tries to slash
-corresponds to an operation that the staker participates in
-and has not yet been slashed for.
 
 == Future Work
 
@@ -213,6 +133,10 @@ that tracks individual keep and group memberships,
 it is possible to limit the risk
 from malfunctioning operator contracts or trusted applications
 to the stake actually corresponding to the operations.
+
+This RFC doesn't cover authorizing individual keeps,
+or situations where a trusted application
+has the authority to impose a penalty.
 
 [bibliography]
 == Related Links
